# tree-sitter-powershell

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  eslint.config.mjs  flake.nix  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: lint.yml  publish_crates.yml  publish_npm.yml  publish_pypi.yml
.zed/: settings.json
bindings/c/: tree-sitter-powershell.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_powershell/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPowershellTests/: TreeSitterPowershellTests.swift
corpus/: branch.txt  classes.txt  commands.txt  comments.txt  enum.txt  expressions.txt  functions.txt  loops.txt  number.txt  obfuscated.txt  operators.txt  strings.txt  type.txt  variables.txt
prebuilds/darwin-arm64/: tree-sitter-powershell.node
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: branch.txt  classes.txt  commands.txt  comments.txt  enum.txt  expressions.txt  functions.txt  loops.txt  number.txt  obfuscated.txt  operators.txt  strings.txt  type.txt  variables.txt
