[package]
name = "tree-sitter-powershell"
description = ""
version = "0.25.10"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "powershell"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/airbus-cert/tree-sitter-powershell"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
